# AI-Document-Translator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  manage.py  pyproject.toml
.github/workflows/: ci.yml  django.yml
AI_translater/: asgi.py  settings.py  urls.py  views.py  wsgi.py
AI_translater/templates/AI_translater/: upload.html
llm_translator/: asgi.py  settings.py  views.py  wsgi.py
llm_translator/templates/llm_translator/: translation_complete.html  upload.html
src/AI_translater/: translator.py  utils.py
src/llm_translator/: tests.py  translator.py  utils.py
src/translater/: translator.py  utils.py
translating_app/: asgi.py  settings.py  tests.py  urls.py  utils.py  views.py  wsgi.py
translating_app/templates/translating_app/: upload.html
